# template-uv-project

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  conda-env.yml  dotenv_config.py  pyproject.toml
.claude/: .settings.local.json  settings.local.json
.claude/skills/bug-review/: SKILL.md
.claude/skills/check-contracts/: SKILL.md
.claude/skills/ci-check/: SKILL.md
.claude/skills/cicd/: SKILL.md
.claude/skills/coverage/: SKILL.md
.claude/skills/idea-helper/: SKILL.md
.claude/skills/logo/: SKILL.md  make_logo.py
.claude/skills/mental-model/: SKILL.md
.claude/skills/scientific-reviewer/: SKILL.md
.claude/skills/ship/: SKILL.md
.claude/skills/teach/: SKILL.md
.claude/skills/whitepaper-review/: CRITERIA_TEMPLATE.md  EXAMPLE_criteria.md  README.md  SKILL.md
.devcontainer/: Dockerfile  devcontainer.json  project-env.requirements  setup.sh  start_jupyter.sh  start_mlflow.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
.ignore/: README.md
notes/: README.md
projects/: README.md
tests/: __init__.py  test_placeholder.py
